--- a/content/post/point-zero-charge.Rmd
+++ b/content/post/point-zero-charge.Rmd
@@ -1,14 +1,10 @@
 ---
 title: "Finding the Point of Zero Charge in R"
 date: '2018-04-07'
-header:
-  caption: ''
-  image: ''
 slug: point-zero-charge
-summary: "What is the point of this anyways?"
-tags: [Soil Chemistry]
-editor_options:
-  chunk_output_type: console
+description: "What is the point of this anyways?"
+tags:
+- soil chemistry
 ---
 
 If you have your own data, import the data frame into *R* having set the variable names as follows:
@@ -18,6 +14,22 @@ If you have your own data, import the data frame into *R* having set the variabl
   + Cation exchange measurements in the third (and last) column as "Cation"
 
 Or if you want to use the R code only, just input your PZC data manually into the respective strings (ph, anion, and cation). Make sure to fill out the strings in order of the observations, starting with the first PZC measurement. For this all to work, I might add, your cation exchange values should be positive when recorded, though it'll be treated as negative later during the calculation.
+
+```{r setup, include=FALSE}
+# you'll need this package
+library(tidyverse)
+
+# more visually appealing plots
+theme_set(
+  hrbrthemes::theme_ipsum_rc(
+    axis_title_just = "br",
+    axis_title_size = 14,
+    plot_margin = margin(t = 2, r = 2, b = 2, l = 2, unit = "mm"),
+    grid_col = "#F1F1F1"
+    )
+  )
+```
+
 
 ```{r, data}
 pH <- c(3.2, 3.4, 3.75, 4.1, 4.85, 6.4, 6.7)
@@ -35,21 +47,18 @@ The **net charge** is the difference between the anion and cation charges. Anion
 ```{r, net-charge-and-data-frames, message=FALSE, warning=FALSE}
 Net <- Anion + Cation
 
-# you'll need this package
-library('tidyverse')
-
 # stitch it all together in a data frame
-df.pzc <- tibble(pH, Anion, Cation, Net) %>% 
+df_pzc <- tibble(pH, Anion, Cation, Net) %>% 
   arrange(desc(Net))
 
 # long form of the data frame
-df.pzc2 <- tibble(pH, Anion, Cation, Net) %>% 
+df_pzc2 <- tibble(pH, Anion, Cation, Net) %>% 
   arrange(desc(Net)) %>% 
   gather(key = "Measure",
          value = "Value",
          2:4)
 
-df.pzc2$Measure <- factor(df.pzc2$Measure,
+df_pzc2$Measure <- factor(df_pzc2$Measure,
                            levels = c('Anion', 'Net', 'Cation'))
 ```
 
@@ -57,12 +66,12 @@ This code finds the exact point of zero charge, so that 1) it can be known exact
 
 ```{r, find-pzc}
 # find pzc by calculating slope of line between last positive (AEC) point
-pos <- filter(df.pzc, Net > 0) %>%
+pos <- filter(df_pzc, Net > 0) %>%
   select(pH, Net) %>% 
   tail(n = 1)
 
 # and first negative (CEC) point
-neg <- filter(df.pzc, Net < 0) %>%
+neg <- filter(df_pzc, Net < 0) %>%
   select(pH, Net) %>% 
   head(n = 1)
 
@@ -71,22 +80,22 @@ slope <- (neg$Net - pos$Net) / (neg$pH - pos$pH)
 
 pzc <- ((0 - pos$Net) / slope) + pos$pH
 
-pzc.label <- round(pzc, digits = 2)
+pzc_label <- round(pzc, digits = 2)
 
 ```
 
 Make sure the plot scales properly to the first and last pH measurements.
 
 ```{r, autoscale-plot}
-ph.first <- head(pH, n = 1)
+ph_first <- head(pH, n = 1)
 
-ph.last <- tail(pH, n = 1)
+ph_last <- tail(pH, n = 1)
 ```
 
 Then, plot PZC.
 
-```{r, plot, fig.asp=0.6}
-ggplot(data = df.pzc2,
+```{r, plot, fig.asp=0.8}
+ggplot(data = df_pzc2,
        aes(x = pH, y = Value, linetype = Measure)) +
   geom_line() +
   geom_point(size = 1) +
@@ -100,26 +109,25 @@ ggplot(data = df.pzc2,
              pch = 18) +
   # annotations for labels
   annotate(geom = 'text',
-           label = pzc.label,
+           label = pzc_label,
            x = pzc + 0.1, y = 0.3,
-           family = 'serif') +
+           family = "Roboto Condensed") +
   annotate(geom = 'text',
            label = "AEC +",
            x = pH[[2]], y = 0.2,
-           family = 'serif') +
+           family = "Roboto Condensed") +
   annotate(geom = 'text',
            label = "CEC -",
            x = pH[[2]], y = -0.2,
-           family = 'serif') +
-  scale_x_continuous(breaks = seq(from = ph.first,
-                                  to = ph.last,
-                                  by = (ph.last - ph.first))) +
+           family = "Roboto Condensed") +
+  scale_x_continuous(breaks = seq(from = ph_first,
+                                  to = ph_last,
+                                  by = (ph_last - ph_first))) +
   scale_linetype_manual(values = c(2, 1, 3)) +
   labs(title = "Point of Zero Charge",
        x = "pH",
        y = "Net Charge",
-       linetype = NULL) +
-  theme_classic(base_family = 'serif', base_size = 14)
+       linetype = NULL)
 ```
 
 To make your life easier, below is a link to the *R* code so that you do not have to copy and paste code chunks from this page.
