--- a/content/post/my-ggplot-theme.Rmd
+++ b/content/post/my-ggplot-theme.Rmd
@@ -15,7 +15,7 @@ In R, I plot with `ggplot`. Inspired by others who have also made themes that lo
 library(tidyverse)
 ```
 
-# Examples of default plots
+Examples of default plots
 
 I'll plot the built-in `mtcars` data, with some added titles and with modifications to the points (colors and shapes).
 
@@ -46,7 +46,7 @@ The classic choice isn't bad; has a clean feel that says, "I'm ready for a look"
 
 [^1]: My theme is clearly inspired by \`hrbrthemes\`, but my own modifications mean that I claim it as my own now. Plus I don't have to load an extra package.
 
-# My theme
+theme_gradcylinder
 
 ```{r my-theme}
 library(extrafont)
